Add endpoint to perform OCR and extract URLs

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,10 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Update package lists and install tesseract-ocr
+RUN apt-get update && apt-get install -y tesseract-ocr
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
+
 # Copy the rest of your app's source code
 COPY . .
 
