--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,15 +1,26 @@
 server {
     listen 80;
-    server_name localhost;
+    listen 443 ssl;
+    server_name img2url.ca www.img2url.ca;
+
+    # SSL configuration
+    ssl_certificate /etc/letsencrypt/live/img2url.ca/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/img2url.ca/privkey.pem;
     
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Serve static frontend files
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
+    # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://img2url-server:8000/;  # Note the trailing slash
+        proxy_pass http://server:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -19,4 +30,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
+
+# Redirect HTTP to HTTPS
+server {
+    listen 80;
+    server_name img2url.ca www.img2url.ca;
+    return 301 https://$host$request_uri;
 }
