--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,16 @@ services:
     image: img2url-client
     container_name: img2url-client
     build: 
-      context: ./client  # or ./frontend depending on your folder structure
+      context: ./client
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./client:/app
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
-    ports:
-      - "80:80"  # Map host port 3000 to container port 80
     depends_on:
       - server
 
@@ -17,13 +22,12 @@ services:
     image: img2url-server
     container_name: img2url-server
     build:
-      context: ./server  # or ./backend depending on your folder structure
+      context: ./server
     networks:
       - app-network
-    ports:
-      - "8000:8000"  # Map host port 8000 to container port 8000
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
+    expose:
+      - "8000:8000"
+
 
 networks:
   app-network:
